force-app/main/default/objects/FS_Artifact_Simulation_Result__c/FS_Artifact_Simulation_Result__c.object-meta.xml
<CustomObject>
    <description>Artifact Simulation Result..</description>
    <label>Artifact Simulation Result</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artifact Simulation Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>