force-app/main/default/objects/FS_Artifact_Simulation_Result__c/fields/FS_From_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_From_Name__c</fullName>
    <description>..</description>
    <label>From Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>