force-app/main/default/objects/FS_Artifact_Simulation_Result__c/fields/FS_To_Count__c.field-meta.xml
<CustomField>
    <fullName>FS_To_Count__c</fullName>
    <description>..</description>
    <label>To Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>