force-app/main/default/objects/FS_Artifact_Simulation_Result__c/fields/FS_To_UUID__c.field-meta.xml
<CustomField>
    <fullName>FS_To_UUID__c</fullName>
    <description>..</description>
    <label>To UUID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>